<?xml version="1.0"?>
<package format="3">
  <name>at_modem_monitor</name>
  <version>0.1.0</version>
  <description>Reusable AT modem monitor: template engine + project plugin with mock mode.</description>
  <maintainer email="flying_robot@todo.todo">Flying Robot Project</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
