cmake_minimum_required(VERSION 3.8)
project(huawei_lte_http_monitor)
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
add_executable(at_hilink_adapter_node src/at_hilink_adapter_node.cpp)
target_include_directories(at_hilink_adapter_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
ament_target_dependencies(at_hilink_adapter_node rclcpp std_msgs)
install(TARGETS at_hilink_adapter_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
ament_package()
