<?xml version="1.0"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.1.0</version>
  <description>
    Reusable mission manager node. Follows Template Engine and
    Implementation Plugin architecture.
  </description>
  <maintainer email="flying_robot@todo.todo">Flying Robot Project</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
