<?xml version="1.0"?>
<package format="3">
  <name>supervisor_pkg</name>
  <version>1.0.0</version>
  <description>Drone health supervisor node</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>  
  <depend>rclcpp</depend>
  <depend>drone_health_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
